<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:summary="Edit Profile"
        android:title="Edit Profile">

        <EditTextPreference
            android:capitalize="words"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_name"
            android:key="@string/pref_title_name"
            android:summary="Alex"/>

        <EditTextPreference
            android:summary="someone@email.com"
            android:key="@string/pref_title_email"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_email" />

        <EditTextPreference
            android:inputType="number|numberDecimal"
            android:key="@string/hint_height"
            android:hint="cm"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_height"
            android:summary="1.70cm"/>

        <Preference
            android:title="@string/pref_title_delete_account"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:summary="My Goals"
        android:title="My Goals">

        <EditTextPreference
            android:inputType="number|numberDecimal"
            android:hint="kg"
            android:summary="80"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_s_weight" />

        <EditTextPreference
            android:inputType="number|numberDecimal"
            android:key="@string/pref_title_c_weight"
            android:summary="78"
            android:hint="kg"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_c_weight" />

        <EditTextPreference
            android:inputType="number|numberDecimal"
            android:summary="75"
            android:hint="kg"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_g_weight" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_Notifications">

        <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_new_message"
            android:title="@string/pref_title_Notifications" />

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:summary="@string/pref_title_Notifications"
            android:title="Notification tone" />

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_Reminder" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_Help">
        <Preference
            android:key="About Us"
            android:title="@string/pref_title_about_Us"/>
        <PreferenceScreen
            android:key="Feedback"
            android:title="@string/pref_title_feedback"/>
        <Preference
            android:key="Share"
            android:title="@string/pref_title_share"/>
    </PreferenceCategory>
</PreferenceScreen>