<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:summary="Edit Profile"
        android:title="Edit Profile">

        <EditTextPreference
            android:capitalize="words"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_name" />

        <EditTextPreference
            android:hint="someone@email.com"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_email" />

        <EditTextPreference
            android:inputType="number|numberDecimal"
            android:hint="cm"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_height"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:summary="My Goals"
        android:title="My Goals">

        <EditTextPreference
            android:inputType="number|numberDecimal"
            android:hint="kg"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_s_weight" />

        <EditTextPreference
            android:inputType="number|numberDecimal"
            android:hint="kg"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_c_weight" />

        <EditTextPreference
            android:inputType="number|numberDecimal"
            android:summary="70"
            android:hint="kg"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_g_weight" />

    </PreferenceCategory>

</PreferenceScreen>
