<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uk.ac.napier.ultimatefitnesstool.Activities.MainHomeActivity">

<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linearLayoutCompatLooseweight">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonTipsandTricks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/tips_tricks"
        android:textSize="22sp"
        android:padding="20dp"
        android:layout_marginTop="20dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonMealsSuggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/Meals"
        android:padding="20dp"
        android:textSize="22sp"
        android:layout_marginTop="20dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonWorkoutSuggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/Workout"
        android:padding="20dp"
        android:textSize="22sp"
        android:layout_marginTop="20dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonSupplementSuggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/Supplements"
        android:padding="20dp"
        android:textSize="22sp"
        android:layout_marginTop="20dp" />

</android.support.v7.widget.LinearLayoutCompat>
</RelativeLayout>