<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FloralWhite"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="uk.ac.napier.ultimatefitnesstool.Activities.LoginActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@mipmap/ic_launcher_foreground2">
        </android.support.v7.widget.AppCompatImageView>

        <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:background="@color/colorPrimary"
            android:textColorHint="@color/White"
            android:textColor="@color/White"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="22sp"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:background="@color/colorPrimary"
            android:textColorHint="@color/White"
            android:textColor="@color/White"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="22sp"/>
        </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_marginTop="40dp"
        android:id="@+id/appCompatButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:text="@string/text_login" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewLinkRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/text_not_member"
        android:textSize="18dp"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewLinkForgotPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textSize="18dp"/>

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>