<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollViewRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uk.ac.napier.ultimatefitnesstool.Activities.RegisterActivity"
    tools:layout_editor_absoluteY="81dp"
    android:background="@color/FloralWhite">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/registerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher_foreground2">
        </android.support.v7.widget.AppCompatImageView>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:background="@color/colorPrimary"
                android:textColorHint="@color/White"
                android:textColor="@color/White"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="20sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:background="@color/colorPrimary"
                android:textColorHint="@color/White"
                android:textColor="@color/White"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:background="@color/colorPrimary"
                android:textColorHint="@color/White"
                android:textColor="@color/White"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                android:background="@color/colorPrimary"
                android:textColorHint="@color/White"
                android:textColor="@color/White"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_height"
                android:background="@color/colorPrimary"
                android:textColorHint="@color/White"
                android:textColor="@color/White"
                android:inputType="number|numberDecimal"
                android:maxLines="1"
                android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_weight"
                android:background="@color/colorPrimary"
                android:textColorHint="@color/White"
                android:textColor="@color/White"
                android:inputType="number|numberDecimal"
                android:maxLines="1"
                android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_age"
                android:background="@color/colorPrimary"
                android:textColorHint="@color/White"
                android:textColor="@color/White"
                android:inputType="number|numberDecimal"
                android:maxLines="1"
                android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp" >
            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/White"
                android:text="@string/radioButton"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/White"
                android:text="@string/radioButton2"
                android:textSize="18sp" />
        </RadioGroup>

    <android.support.v7.widget.AppCompatButton
        android:layout_marginTop="22dp"
        android:id="@+id/appCombatButtonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:text="@string/text_register" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewLoginLink"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_member"
        android:gravity="center"
        android:textSize="18dp"/>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
