<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uk.ac.napier.ultimatefitnesstool.Activities.MainHomeActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linearLayoutCompatBmi">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_height"
                android:background="@color/colorPrimary"
                android:textColorHint="@color/White"
                android:textColor="@color/White"
                android:inputType="number|numberDecimal"
                android:maxLines="1"
                android:textSize="22sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_weight"
                android:background="@color/colorPrimary"
                android:textColorHint="@color/White"
                android:textColor="@color/White"
                android:inputType="number|numberDecimal"
                android:maxLines="1"
                android:textSize="22sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_marginTop="20dp"
            android:id="@+id/appCompatButtonCalculateBmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="16dp"
            android:text="@string/text_calculate_Bmi" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/red"
            android:padding="16dp"/>

    </android.support.v7.widget.LinearLayoutCompat>
</RelativeLayout>
